--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-multiview.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-multiview.html
@@ -1,6 +1,6 @@
 <link rel="import" href="/sys/polymer/polymer.html">
 
-<dom-module id="tu-layout-multiview">
+<dom-module id="co-layout-multiview">
   <style>
     .view {
       position: absolute;
@@ -23,7 +23,7 @@
   </template>
   <script>
     Polymer({
-      is: "tu-layout-multiview",
+      is: "co-layout-multiview",
       properties: {
         data: {
           type: Object,
