--- a/src/Launcher/wwwroot/Launcher/elements/co-logo-with-spinner/co-logo-with-spinner.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-logo-with-spinner/co-logo-with-spinner.html
@@ -1,4 +1,4 @@
-<dom-module id="tu-logo-with-spinner">
+<dom-module id="co-logo-with-spinner">
   <style type="text/css">
             .visiblespinner
             {
@@ -191,7 +191,7 @@
     </template>
   <script type="text/javascript">
       Polymer({
-          is: 'tu-logo-with-spinner',
+          is: 'co-logo-with-spinner',
           properties: {
               cache: {
                   type: String,
