--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
@@ -1,9 +1,9 @@
 ﻿<link rel="import" href="/sys/polymer/polymer.html" />
-<link rel="import" href="/tu-common/css/tu-fontawesome.html">
+<link rel="import" href="/co-common/css/co-fontawesome.html">
 
 
 <dom-module id="launcher-search">
-    <style include="tu-fontawesome"></style>
+    <style include="co-fontawesome"></style>
     <style>
         :host {
             display: inline;
