--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-multiview.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-multiview.html
@@ -190,7 +190,7 @@ version: 0.4.3
             }
         };
 
-        document.registerElement('tu-multiview', {
+        document.registerElement('co-multiview', {
             prototype: LauncherPartialPrototype
         });
     })();
