--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -118,9 +118,9 @@
     </style>
 </head>
 <body is="launcher-main" class="loading">
-    <div id="tu-splash">
-        <span id="tu-splash-text">LOADING</span>
-        <span id="tu-splash-spinner">⚇</span>
+    <div id="co-splash">
+        <span id="co-splash-text">LOADING</span>
+        <span id="co-splash-spinner">⚇</span>
     </div>
     <template id="root-launcher-dom-bind" is="dom-bind">
 
