--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -199,7 +199,7 @@
             </div>
         </template>
 
-        <tu-lightbox-popup></tu-lightbox-popup>
+        <co-lightbox-popup></co-lightbox-popup>
 
         <paper-dialog opened="{{model.ConnectionError}}" modal="true">
             <h4>Connection error</h4>
