--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-panels.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-panels.html
@@ -30,6 +30,8 @@
               order: 2;
               z-index: 1;
               position: relative;
+              display: flex;
+              flex-direction: column;
             }
 
             :host #contextPanel
@@ -84,11 +86,11 @@
               position: absolute;
               right: 0px;
               top: 0px;
-             
+
               width: 35px;
               height: 60px;
               z-index: 1;
-              
+
               background: linear-gradient(to right, rgba(0,0,0,0.025) 0%, rgba(0,0,0,0.0) 100%);
             }
 
@@ -220,7 +222,8 @@
         <div id="wrapper" >
 
             <div id="center">
-                <content select="[main]"></content>
+              <content select="[context]"></content>
+              <content select="[main]"></content>
             </div>
             <div id="contextPanel" on-tap="contextPanelTapped">
                 <div id="hoverContextPanel">
@@ -229,7 +232,7 @@
                     <co-icon-button id="contextPanelToggler" nohovereffect on-tap="toggleContextPanel" icon="{{_calcArrow(contextPanelMinimized)}}"></co-icon-button>
                   </div>
                 </div>
-                <content select="[context]"></content>
+                <content select="[contextsidebar]"></content>
                 <div id="widthtracker" on-track="contextPanelWidthTrack"></div>
             </div>
             <div id="right">
