--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -115,6 +115,11 @@
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
       }
 
+      [main] {
+        position: relative;
+        flex:1;
+      }
+
     </style>
 </head>
 <body is="launcher-main" class="loading">
@@ -129,8 +134,8 @@
                 <co-logo-with-spinner></co-logo-with-spinner>
             </div>
 
-            
-           
+
+
             <div id="launcher-menu">
                <ul>
                   <template is="imported-template" content$="{{model.menu.LauncherLayoutInfo.MergedHtml}}" model="{{model.menu}}"></template>
@@ -188,7 +193,10 @@
                       <starcounter-include partial="{{item}}" class="workspace" visible$="{{item.Launcher.ActiveWorkspace}}"></starcounter-include>
                   </template>
               </div>
-              <co-layout-multiview context data="{{model.contextbar}}"></co-layout-multiview>
+              <div context>
+                <template is="imported-template" model="{{model.contextbar.colab_organizer.Current.CurrentContext}}" content="/co-organizer/organizer/context.html"></template>
+              </div>
+              <co-layout-multiview contextsidebar data="{{model.contextbar}}"></co-layout-multiview>
               <co-layout-multiview right data="{{model.sidebar}}"></co-layout-multiview>
             </co-layout-panels>
         </div>
