--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherMobileTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherMobileTemplate.html
@@ -31,18 +31,37 @@
     <!-- Your app title -->
     <title>Colab</title>
 
-    <link rel="import"
-      href="/sys/paper-drawer-panel/paper-drawer-panel.html">
-    <link rel="import"
-      href="/sys/paper-header-panel/paper-header-panel.html">
-    <link rel="import"
-      href="/sys/paper-toolbar/paper-toolbar.html">
-    <link rel="import"
-      href="/sys/paper-icon-button/paper-icon-button.html">
-    <link rel="import"
-      href="/sys/iron-icons/iron-icons.html">
-    <link rel="import"
-      href="/sys/iron-flex-layout/iron-flex-layout.html">
+    <link rel="import" href="/sys/paper-drawer-panel/paper-drawer-panel.html">
+    <link rel="import" href="/sys/paper-header-panel/paper-header-panel.html">
+    <link rel="import" href="/sys/paper-toolbar/paper-toolbar.html">
+    <link rel="import" href="/sys/paper-button/paper-button.html">
+    <link rel="import" href="/sys/paper-card/paper-card.html">
+    <link rel="import" href="/sys/paper-fab/paper-fab.html">
+    <link rel="import" href="/sys/paper-input/paper-input.html">
+    <link rel="import" href="/sys/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="/sys/iron-icons/iron-icons.html">
+    <link rel="import" href="/sys/iron-flex-layout/iron-flex-layout.html">
+    <link rel="import" href="/sys/iron-flex-layout/iron-flex-layout-classes.html">
+
+    <style is="custom-style" include="iron-flex iron-flex-alignment">
+      #logo {
+        width: 27px;
+        height: 28px;
+        background: url("/Launcher/elements/cl-logo/cl-logo-fff.png");
+        background-size: cover;
+        cursor: pointer;
+        transition: opacity 400ms ease;
+        margin: 0px 2px 0px 6px;
+      }
+
+      .workspace {
+        display: flex;
+        justify-content: center;
+        padding: 5px;
+        height: 100%;
+        box-sizing: border-box;
+      }
+    </style>
 
  </head>
  <body is="launcher-main">
@@ -50,16 +69,22 @@
       <paper-drawer-panel class="flex">
         <paper-header-panel drawer>
           <paper-toolbar>
-            <div>Application</div>
+            <div>Context</div>
           </paper-toolbar>
-          <div> Drawer content... </div>
+          <div style="border-right:1px solid;height:100%">Login first</div>
         </paper-header-panel>
         <paper-header-panel main>
           <paper-toolbar>
             <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-            <div>Title</div>
+            <div id="logo" onclick="puppet.puppet.morphUrl('/launcher/mobile/dashboard')" class="hover"></div>
+            <div class="flex" style="margin-left:10px;">Colab</div>
+            <template is="imported-template" content$="{{model.user.LauncherLayoutInfo.MergedHtml}}" model="{{model.user}}"></template>
           </paper-toolbar>
-          <div> Main content... </div>
+          <div class="workspace">
+            <template is="dom-repeat" items="{{model.workspaces}}">
+                <starcounter-include partial="{{item}}" class="workspace" visible$="{{item.Launcher.ActiveWorkspace}}"></starcounter-include>
+            </template>
+          </div>
         </paper-header-panel>
       </paper-drawer-panel>
     </template>
