--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -19,6 +19,12 @@
 
     <link rel="import" href="/sys/polymer/polymer.html" />
     <link rel="import" href="/sys/paper-dialog/paper-dialog.html" />
+    <link rel="import" href="/sys/paper-toggle-button/paper-toggle-button.html">
+    <link rel="import" href="/sys/paper-checkbox/paper-checkbox.html">
+    <link rel="import" href="/sys/paper-input/paper-textarea.html">
+    <link rel="import" href="/sys/paper-radio-group/paper-radio-group.html">
+    <link rel="import" href="/sys/paper-radio-button/paper-radio-button.html">
+
 
     <!-- Import Starcounter specific components -->
     <link rel="import" href="/sys/starcounter.html" />
