--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
@@ -315,7 +315,7 @@
               this.set(path, number + 1);
               this.set('data.query$',  "");
               this.set("data.close$", this.data.close$ + 1);
-              console.log(path, number);
+              //console.log(path, number);
             },
             focus: function () {
                 this.$.input.focus();
