--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-panels.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-panels.html
@@ -12,7 +12,8 @@
               right: 0px;
               top: 0px;
               bottom: 0px;
-              display: block;
+              display: flex;
+              flex-direction: column;
               -webkit-user-select: none;
               -moz-user-select: none;
               user-select: none;
@@ -99,7 +100,7 @@
               height: 47px;
               z-index: 1;
 
-              
+
             }
 
             /* Media query states */
